# minesweeper_4d_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: main.rs
