[package]
name = "minesweeper_4d"
version = "0.1.0"
description = "minesweeper but 4d"
authors = ["itabesamesa <laura418@proton.me>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.9.2"
mersenne_twister = "1.1.1"
chrono = "0.4.42"
