[package]
name = "minesweeper_4d"
version = "0.1.1"
description = "minesweeper but 4d"
authors = ["itabesamesa <laura418@proton.me>"]
license = "MIT"
edition = "2024"

repository = "https://github.com/itabesamesa/minesweeper_4d_rs"
readme = "./README.md"
keywords = ["game", "minesweeper", "4D", "multidimensional"]
categories = ["games", "command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.9.2"
chrono = "0.4.42"
